samples/_failures_safe/1761721625_4840e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_540428b7.c:180: error: expected ‘;’, ‘,’ or ‘)’ at end of input
